display container is completed along with the styligg  part

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="./css/header.css" rel="stylesheet" type="text/css" />
     <link href="./css/body.css" rel="stylesheet" type="text/css" />
     <link href="./css/footer.css" rel="stylesheet" type="text/css" />
-    <link href="./css/main.css" rel="stylesheet" type="text/css" />
+    <link href="./css/main_container.css" rel="stylesheet" type="text/css" />
 
     <title>Document</title>
   </head>
@@ -54,20 +54,43 @@
       </div>
     </header>
     <div class="content_container">
-      <!-- left side container 
+      <!-- left side container  -->
       <div class="left">
-        <div class="display"></div>
+        <div class="display">
+          <div class="current_image">
+            <img
+              src="https://images.unsplash.com/photo-1592714375745-d93348944974?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=401&q=80"
+              alt="coldplay pic"
+            />
+          </div>
+          <div class="display_des">
+            <div class="name_fol">
+              <h2>ColdPlay</h2>
+              <p>851 Followers</p>
+            </div>
+            <p id="band_name">British Band</p>
+            <p>
+              Coldplay is an English rock band formed in London in 1996. The
+              band's members are vocalist/pianist Chris Martin, guitarist Jonny
+              Buckland, bass player Guy Berryman and drummer Will Champion.
+              Coldplay became famous around the world with their 2000 song
+              "Yellow".
+            </p>
+            <div class="display_action">
+              <button class="play_btn">Play All</button>
+              <button class="follow_btn">Follow</button>
+            </div>
+            <p id="details">247 Tracks | 128 Albums</p>
+          </div>
+        </div>
         <div class="list"></div>
       </div>
 
-      -->
-
-      <!-- right side container
+      <!-- right side container -->
       <div class="right">
         <div class="artists"></div>
         <div class="recently"></div>
       </div>
-       -->
     </div>
     <footer>Footer</footer>
     <script src="./script/script.js" type="text/javaScript"></script>
