modified the header style

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
       <!-- app logo with the app name  -->
       <div class="logo_container">
         <div class="logo">
-          <img src="./static/img/logo.jfif" alt="music logo" />
+          <!-- <img src="./static/img/logo.jfif" alt="music logo" />
+           -->
+          <i class="fas fa-music fa-2x"></i>
         </div>
         <div class="studio_name">
           <p>Ninjas</p>
@@ -92,7 +94,8 @@
         <div class="recently"></div>
       </div>
     </div>
-    <footer>Footer</footer>
+    <div class="footer_div">Footer</div>
+    <!-- <footer>Footer</footer> -->
     <script src="./script/script.js" type="text/javaScript"></script>
   </body>
 </html>
